--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>jeffjar!</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <!--[if lt IE 9]>
@@ -20,15 +20,14 @@
         <ul>
           <li><a href="aboutme.html">About me</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li class="active"><a href="contact.html">Contact</a></li>
         </ul>
       </header>
 
       <section>
         <div class="container">
-          <h3>Welcome to my page.</h3>
-          <p>You've come across a pretty boring place - there's nothing exciting on this page, because I don't know how to put anything exciting on a website yet! As I keep learning random things about html/css/whatnot, I'll start putting more random shit on here.</p>
-          <p>Look, a <a href="#">link</a> that goes nowhere!
+          <h3>How to contact me:</h3>
+          <p>todo</p>
         </div>
       </section>
 
