--- a/aboutme.html
+++ b/aboutme.html
@@ -26,15 +26,15 @@
 
       <section>
         <div class="container">
-          <h3>What do you do with your life?</h3>
-          <p>Two main things: I do stuff that maximizes my growth and future potential to give back to humans, and I dick around the rest of the time! Here's the stuff that falls in the first category:</p>
+          <h3>Who are you?</h3>
+          <p>I'm a high school student growing up in the Bay Area.</p>
+          <h3>What are your interests?</h3>
           <ul>
-            <li><b>Computer science:</b> Something that any teen in Silicon Valley oughta learn. I toy with algorithmic coding (USACO), and I fool around a lot with geeky things such as linux or vim.</li>
-            <li><b>Machine learning:</b> An invaluable skill as we enter the modern data-driven age. I'm all about the new hype about <a href="http://www.datarobot.com/blog/a-primer-on-deep-learning/">deep learning</a>, and I'm currently exploring its applications in biomedical informatics (microarray mRNA data). I'm also quite excited about how natural language processing will <a href="http://nlp.stanford.edu/courses/NAACL2013/">pick up on these techniques</a>.</li>
-            <li><b>Linguistics:</b> Such a universal phenomenon, yet most people don't quite understand how language works. I research sociolinguistcs about English phonological change local to my high school area, and I like to read <a href="http://specgram.com/">satirical journals</a>.</li>
-            <li><b>Music:</b> The deepest form of expression for the soul. I'm a classically trained french horn player and piano player, and I pour my angst and joy into listening and performing. I'm also a big appreciator of hip hop and jass.</li>
+            <li><b>Computer science:</b> I do competitive algorithmic coding (USACO), and I'm fluent in C++, python, bash scripting, and R.</li>
+            <li><b>Machine learning:</b> It's an invaluable skill as we enter the modern data-driven age. I'm all about the new hype about <a href="http://www.datarobot.com/blog/a-primer-on-deep-learning/">deep learning</a>, and I'm currently exploring its applications in biomedical informatics (specifically, microarray mRNA data). I'm also quite excited about how natural language processing will <a href="http://nlp.stanford.edu/courses/NAACL2013/">pick up on these techniques</a>.</li>
+            <li><b>Linguistics:</b> Language is such a universal phenomenon, yet so commonly misunderstood. I've researched the sociolinguistcs of English phonological change local to my high school area, and I like to read <a href="http://specgram.com/">satirical journals</a> for fun.</li>
+            <li><b>Music:</b> It's the deepest form of expression for the soul. I'm a classically trained french horn player and piano player, and I pour my angst and joy into the art. I'm also a big appreciator of hip hop and jass.</li>
           </ul>
-          <p>And <a href="http://reddit.com">here</a>'s the majority of what falls in the second category.</p>
 
           <h3>Where else do you exist online?</h3>
           <p>Check out my <a href="https://www.quora.com/Jeffrey-Chang-5">quora</a>, where I upvote good content but don't answer many questions. There's also my <a href="https://github.com/jeffiar">github</a>, where this webpage is hosted.</p>
