--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
       <section>
         <div class="container">
           <h3>How to contact me:</h3>
-          <p>todo</p>
+          <p>You can email me at jeffjar (dot) chang (snail thing) gmail (dot) com.</p>
         </div>
       </section>
 
