--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>Projects</title>
+    <title>jeffjar!</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <!--[if lt IE 9]>
@@ -19,16 +19,15 @@
         <h1><a href="index.html">jeffjar!</a></h1>
         <ul>
           <li><a href="aboutme.html">About me</a></li>
-          <li class="active"><a href="projects.html">Projects</a></li>
+          <li class="active"><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </header>
 
       <section>
         <div class="container">
-          <h3>Current projects:</h3>
+          <h1>Blog</h1>
           <p>todo</p>
-          <img style="margin:auto" src="http://www.desktop-gadgets.net/data/gadgets/16/screenshot.png">
         </div>
       </section>
 
