--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <h1><a href="index.html">jeffjar!</a></h1>
         <ul>
           <li><a href="aboutme.html">About me</a></li>
-          <li><a href="projects.html">Projects</a></li>
+          <li><a href="blog.html">Blog</a></li>
           <li class="active"><a href="contact.html">Contact</a></li>
         </ul>
       </header>
